[gd_scene load_steps=7 format=3 uid="uid://4g7hsk4l53k5"]

[ext_resource type="ArrayMesh" uid="uid://83q7tk4fwgdx" path="res://Art/DartGame/11721_darboard_V4_L3.obj" id="1_78i72"]
[ext_resource type="Script" path="res://Systems/DartGame/DartGame.gd" id="1_ayjy5"]
[ext_resource type="Texture2D" uid="uid://dqc46bymmavw4" path="res://Art/DartGame/dartboard.jpg" id="2_kq13x"]
[ext_resource type="PackedScene" uid="uid://d2pbvppj3p7oa" path="res://Systems/Interaction/Interactable.tscn" id="2_vi77g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hj0rg"]
albedo_texture = ExtResource("2_kq13x")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bl46v"]
height = 0.05

[node name="DartGame" type="MeshInstance3D"]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 0.8, 0)
mesh = ExtResource("1_78i72")
surface_material_override/0 = SubResource("StandardMaterial3D_hj0rg")
script = ExtResource("1_ayjy5")
metadata/_edit_lock_ = true

[node name="Interactable" parent="." instance=ExtResource("2_vi77g")]
transform = Transform3D(100, 0, 0, 0, -1.31134e-05, -100, 0, 300, -4.37114e-06, 0, 0.5, 8)

[node name="CollisionShape3D" parent="Interactable" index="0"]
shape = SubResource("CylinderShape3D_bl46v")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
